添加指令：GetLabItem 添加了实验品：InfiniteApple,InfiniteInkSac

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,6 +14,9 @@ commands:
   getinfinitefood:
     description: Gives food that will not be consumed
 
+  getlabitem:
+    description: Gives the specified lab item
+
 permissions:
   kaituoprops.*:
     description: Parent permission for kaituoprops
